experiments/cg_2D/log_bernstein_12.txt
$ cmake -S . -B build -Dnvidia=ON -Dpolynomial_degree=12 -Dscalar_type=float64
-- Polynomial degree: 12
-- Scalar type: float64
-- Compiling for NVIDIA GPUs
-- Found Boost 1.87.0 at /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/lib/cmake/Boost-1.87.0
--   Requested configuration: QUIET REQUIRED
-- Found boost_headers 1.87.0 at /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/lib/cmake/boost_headers-1.87.0
-- Found Boost: /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/lib/cmake/Boost-1.87.0/BoostConfig.cmake (found suitable version "1.87.0", minimum required is "1.70")  
-- Checking for Basix hints with /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/bin/python3
-- Adding /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/lib/python3.12/site-packages/basix to Basix search hints
-- Found HDF5 at /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/cmake via NO_MODULE. Now trying to extract locations etc.
-- Trying to get properties of target hdf5-shared
-- Found imported configurations: RELEASE
-- Start search through imported configurations in the following order: Release;RELWITHDEBINFO;RELEASE;DEBUG;RELEASE
-- Selected imported configuration: RELEASE
-- HDF5_DIR: /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/cmake
-- HDF5_DEFINITIONS: 
-- HDF5_INCLUDE_DIRS: /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/include
-- HDF5_LIBRARIES: hdf5-shared
-- HDF5_HL_LIBRARIES: 
-- HDF5_C_DEFINITIONS: 
-- HDF5_C_INCLUDE_DIR: 
-- HDF5_C_INCLUDE_DIRS: /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/include
-- HDF5_C_LIBRARY: /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/lib/libhdf5.so.310.5.0
-- HDF5_C_LIBRARIES: hdf5-shared
-- HDF5_C_HL_LIBRARY: 
-- HDF5_C_HL_LIBRARIES: 
-- Defined targets (if any):
-- ... hdf5::hdf5
-- ... hdf5-static
-- ... hdf5-shared
-- Found Boost 1.87.0 at /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/lib/cmake/Boost-1.87.0
--   Requested configuration: QUIET REQUIRED COMPONENTS program_options
-- Found boost_program_options 1.87.0 at /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/lib/cmake/boost_program_options-1.87.0
--   [x] libboost_program_options.so.1.87.0
--   [ ] libboost_program_options.a
-- Adding boost_program_options dependencies: headers
-- Found Boost: /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/lib/cmake/Boost-1.87.0/BoostConfig.cmake (found suitable version "1.87.0", minimum required is "1.70") found components: program_options 
-- Configuring done (0.5s)
-- Generating done (0.0s)
-- Build files have been written to: /home/sr2120/fenicsx-test/build
$ cmake --build build --target mass_cg --clean-first
[1/1] Cleaning all built files...
Cleaning... 4 files.
[1/4] Compiling mass_cg.py
[2/4] Building C object CMakeFiles/mass_cg.dir/mass_cg.c.o
[3/4] Building CUDA object CMakeFiles/mass_cg.dir/examples/mass_cg/main.cpp.o
FAILED: CMakeFiles/mass_cg.dir/examples/mass_cg/main.cpp.o 
/home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/bin/nvcc -forward-unknown-to-host-compiler -DADIOS2_USE_MPI -DBOOST_PROGRAM_OPTIONS_DYN_LINK -DBOOST_PROGRAM_OPTIONS_NO_LIB -DDATA_DIR=\"/home/sr2120/fenicsx-test/examples/mass_cg\" -DDOLFINX_VERSION=\"0.10.0.0\" -DHAS_ADIOS2 -DHAS_PARMETIS -DHAS_PETSC -DMDSPAN_USE_BRACKET_OPERATOR=0 -DMDSPAN_USE_PAREN_OPERATOR=1 -DPOLYNOMIAL_DEGREE=12 -DSCALAR_TYPE=double -DSPDLOG_COMPILED_LIB -DSPDLOG_FMT_EXTERNAL -DSPDLOG_SHARED_LIB -DUSE_CUDA=1 -I/home/sr2120/fenicsx-test/build -I/home/sr2120/fenicsx-test -I/home/sr2120/fenicsx-test/src -isystem /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/view/include -isystem /home/sr2120/spack/var/spack/environments/mfenenv/.spack-env/._view/lduhm7pqz5ct24vpqfmewmv6daohtawl/include -isystem /home/sr2120/spack/opt/spack/linux-ubuntu24.04-sapphirerapids/gcc-13.3.0/openmpi-5.0.6-pgwckhgt5sgjfl7asocpzo6zxezoc2au/include -isystem /home/sr2120/spack/opt/spack/linux-ubuntu24.04-sapphirerapids/gcc-13.3.0/petsc-3.22.4-byl2svh3lptoa7hufvs7mnm4znvrgmyn/include -march=native -std=c++20 -O3 -DNDEBUG --extended-lambda --expt-relaxed-constexpr -lineinfo -O3 -DNDEBUG -std=c++20 "--generate-code=arch=compute_89,code=[compute_89,sm_89]" -MD -MT CMakeFiles/mass_cg.dir/examples/mass_cg/main.cpp.o -MF CMakeFiles/mass_cg.dir/examples/mass_cg/main.cpp.o.d -x cu -c /home/sr2120/fenicsx-test/examples/mass_cg/main.cpp -o CMakeFiles/mass_cg.dir/examples/mass_cg/main.cpp.o
/home/sr2120/fenicsx-test/src/kernels_mass.hpp(183): error: zero-sized variable "qvals" is not allowed in device code
    __attribute__((shared)) T qvals[nq];
                              ^
          detected during:
            instantiation of "void mass_operator_baseline<T,nd,nq>(const T *, T *, const T *, const T *, const int32_t *, const T *) [with T=T, nd=91, nq=0]" at line 128 of /home/sr2120/fenicsx-test/src/mass_baseline.hpp
            instantiation of "void dolfinx::acc::MatFreeMassBaseline<T, P, Q>::operator()(const Vector &, Vector &) [with T=T, P=12, Q=14, Vector=DeviceVector]" at line 165 of /home/sr2120/fenicsx-test/src/cg_gpu.hpp
            instantiation of "int dolfinx::acc::CGSolver<Vector>::solve(Operator &, Vector &, const Vector &, __nv_bool, __nv_bool) [with Vector=DeviceVector, Operator=dolfinx::acc::MatFreeMassBaseline<T, 12, 14>]" at line 146 of /home/sr2120/fenicsx-test/examples/mass_cg/main.cpp
            instantiation of "void solver<T>(MPI_Comm, boost::program_options::variables_map) [with T=T]" at line 225 of /home/sr2120/fenicsx-test/examples/mass_cg/main.cpp

1 error detected in the compilation of "/home/sr2120/fenicsx-test/examples/mass_cg/main.cpp".
ninja: build stopped: subcommand failed.
Traceback (most recent call last):
  File "/home/sr2120/fenicsx-test/run.py", line 94, in <module>
    main()
  File "/home/sr2120/fenicsx-test/run.py", line 81, in main
    subprocess.check_call(build_cmd)
  File "/home/sr2120/spack/opt/spack/linux-ubuntu24.04-sapphirerapids/gcc-13.3.0/python-3.12.9-56bqso24ofcijtfu4d2kho27hckz4meu/lib/python3.12/subprocess.py", line 415, in check_call
    raise CalledProcessError(retcode, cmd)
subprocess.CalledProcessError: Command '['cmake', '--build', 'build', '--target', 'mass_cg', '--clean-first']' returned non-zero exit status 1.
